--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,8 +6,10 @@ spring:
       validation-query: SELECT 1
       max-size: 100
     url: r2dbc:mysql://localhost:3306/test
+#    url: r2dbc:mariadb://localhost:3306/test?socketTimeout=3s
     password: root
     username: root
+    queryTimeout: 3
 
 logging:
   level:
@@ -17,6 +19,7 @@ logging:
     org.springframework.transaction.interceptor: TRACE
     reactor.pool: TRACE
     org.springframework.transaction.reactive: TRACE
+    org.mariadb.r2dbc: TRACE
 
 management:
   server:
